[gd_scene load_steps=9 format=3 uid="uid://c030x4e0ulben"]

[ext_resource type="Script" uid="uid://dcidfuql5ocny" path="res://Scripts/battle_scene.gd" id="1_anwxn"]
[ext_resource type="PackedScene" uid="uid://prw42y7licu0" path="res://Scenes/battle_controller.tscn" id="1_b25br"]
[ext_resource type="PackedScene" uid="uid://c73mcnl35u2om" path="res://Scenes/treiner_pokemon.tscn" id="2_gt16y"]
[ext_resource type="PackedScene" uid="uid://bibasrw2pr3cr" path="res://Scenes/Wild_enemy.tscn" id="4_3gnqe"]
[ext_resource type="Texture2D" uid="uid://ba5nv1af84wfq" path="res://Sprites/battle_back_area.png" id="4_20f6w"]
[ext_resource type="Script" uid="uid://u4xr7hl3lmym" path="res://Scripts/turnManager.gd" id="4_e5vbs"]
[ext_resource type="Texture2D" uid="uid://svaki2mb6420" path="res://Sprites/area.png" id="5_w4764"]
[ext_resource type="PackedScene" uid="uid://ct76l4ck1lin1" path="res://Scenes/attack_ui.tscn" id="6_gt16y"]

[node name="Battle_scene" type="Node2D"]
script = ExtResource("1_anwxn")
inimigo_do_npc_cena = ExtResource("2_gt16y")
inimigo_do_mapa_cena = ExtResource("4_3gnqe")

[node name="BattleBackArea" type="Sprite2D" parent="."]
position = Vector2(180, 89.5)
scale = Vector2(1.8, 0.90500003)
texture = ExtResource("4_20f6w")

[node name="BattleBackArea2" type="Sprite2D" parent="."]
modulate = Color(0.25882354, 0.40784314, 0.54901963, 1)
position = Vector2(179.75002, 148.8)
scale = Vector2(1.7925, 0.31800005)
texture = ExtResource("4_20f6w")

[node name="Area" type="Sprite2D" parent="."]
position = Vector2(290, 62)
scale = Vector2(0.4387499, 0.12124998)
texture = ExtResource("5_w4764")

[node name="Battle_text" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Battle_text"]
layout_mode = 1
offset_left = 64.0
offset_top = 123.0
offset_right = 316.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 8
text = "something happened"
horizontal_alignment = 1
justification_flags = 171

[node name="Enemy_bar" type="ProgressBar" parent="."]
z_index = 1
offset_left = 230.0
offset_top = 7.5
offset_right = 460.0
offset_bottom = 34.5
scale = Vector2(0.5, 0.5)

[node name="Player_bar" type="ProgressBar" parent="."]
z_index = 1
anchors_preset = -1
anchor_bottom = 0.097
offset_left = 7.5
offset_top = 97.5
offset_right = 237.5
offset_bottom = 124.5
scale = Vector2(0.5, 0.5)

[node name="Battle_ui" parent="." instance=ExtResource("1_b25br")]
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("4_e5vbs")

[node name="Attack_ui" parent="." instance=ExtResource("6_gt16y")]
visible = false
offset_left = 102.0
offset_top = 124.0
offset_right = 102.0
offset_bottom = 124.0

[node name="enemy_life_label" type="Label" parent="."]
z_index = 1
offset_left = 197.0
offset_top = 9.0
offset_right = 259.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
text = "100/100"

[node name="player_life_label" type="Label" parent="."]
z_index = 1
offset_left = 126.0
offset_top = 99.0
offset_right = 166.0
offset_bottom = 122.0
scale = Vector2(0.5, 0.5)
text = "100/100"
